--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,7 @@ spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate=true
 spring.flyway.baseline-version=0
 spring.flyway.locations=filesystem:db/migration
+
+#Token configuration
+token.secret=morevq-pkmn
+token.expiration=10
